--- a/html/index.html
+++ b/html/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="ja">
-
 <head>
     <meta charset="UTF-8">
     <title>一橋を想う会| 一橋大学を支援する組織です。 </title>
@@ -8,11 +7,32 @@
     <link rel="stylesheet" href="css/ress.css">
     <link rel="stylesheet" href="css/style.css">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-    <link rel="icon" type="image/png" href="images/favicon-32x32.png">
+    <link rel="icon" type="image/ico" href="images/favicon.ico">
 </head>
-
 <body>
     <header>
+        <section class="title">
+            <!-- <h1>一橋 を 想　う 会</h1> -->
+            <img src="images/title.png" alt="一橋を想う会">
+        </section>
+        <nav>
+            <div class="logo"></div>
+            <div class="menu01"><a href="#.html">会長挨拶</a></div>
+            <div class="menu02"><a href="#.html">活動計画</a></div>
+            <div class="menu03"><a href="#.html">活動実績</a></div>
+            <div class="menu04"><a href="#.html">設立趣旨</a></div>
+            <div class="menu05"><a href="#.html">入会申込</a></div>
+            <div class="menu06"><a href="#.html">会則</a></div>
+            <div class="menu07"><a href="#.html">組織</a></div>
+        </nav>
+        <section class="sub_title">
+            <p>一橋を想う会は、</p>
+            <p>一橋大学を支援する</p>
+            <p>組織です。</p>
+        </section>
+        <section class="scroll_down">
+            <a href="#"><span></span>Scroll&nbsp;Down</a>
+        </section>
     </header>
     <main>
     </main>
