ご挨拶まで完成！

--- a/assets/index.html
+++ b/assets/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ja">
+
 <head>
     <meta charset="UTF-8">
     <title>一橋を想う会| 一橋大学を支援する組織です。 </title>
@@ -9,6 +10,7 @@
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <link rel="icon" type="image/ico" href="images/favicon.ico">
 </head>
+
 <body>
     <header>
         <section class="title">
@@ -35,9 +37,42 @@
         </section>
     </header>
     <main>
+        <section class="greeting">
+            <h2>会長よりご挨拶</h2>
+            <article>
+                <div class="greeting_left">
+                    <p>
+                        <span>高萩光紀&nbsp;&nbsp;略歴</span>
+                        たかはぎ・みつのり&nbsp;&nbsp;1964年一橋大学法学部卒、如水会第38代会長（2008年～2010年）、日本鉱業（現新日鉱ホールディングス）入社。94年ジャパンエナジー取締役、2002年同社社長。 2006年から新日鉱ホールディングス株式会社代表取締役社長。2010年JXホールディングス初代代表取締役社長兼社長執行役員。2016年JXTGホールディングス名誉顧問。
+                    </p>
+                </div>
+                <div class="greeting_right">
+                    <span>一橋を想う会会長&nbsp;&nbsp;高萩光紀より </span>
+                    <p>一橋を想う会会長として一言ご挨拶いたします。</p>
+                    <p>一橋を想う会は、一橋大学の置かれた厳しい現状に鑑み、如水会員として可能な大学支援を自主的に行うために2014年に設立されました。爾来、当会は大学支援のための諸活動を行い、又講演会などを通じて、大学活動への問題提起を行うなど、地味ではありますが、堅実な活動を続け、着実に成果を出していることから関係者から高くご評価いただいております。</p>
+                    <p>また、如水会との連係にも気を配って行なっており、如水会の同好会として認定されており、毎月の如水会報に活動を報告しております。</p>
+                    <p>私はこのような、想う会活動を素晴らしいと認識しており、如水会員の皆様には、是非とも、当会をよろしくご指導ご鞭撻頂きたく、お願い致します。</p>
+                    <span class="sign">20XX年X月X日&nbsp;&nbsp;<br>
+                        <img src="images/sign.png" alt="会長サイン">
+                    </span>
+                </div>
+            </article>
+            <section class="scroll_down2">
+                <span>Scroll&nbsp;Down<br><i class="fa fa-angle-down" aria-hidden="true"></i></span>
+            </section>
+        </section><!-- greetingここまで -->
+        <section class="katudo">
+            <article class="katudo_keikaku">
+            <h2>活動計画</h2>
+            </article>
+            <article class="katudo_houkoku">
+            <h2>活動報告</h2>
+            </article>
+        </section><!-- katudoここまで -->
     </main>
     <footer>
     </footer>
 </body>
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+
 </html>
