--- a/html/index.html
+++ b/html/index.html
@@ -57,17 +57,39 @@
                     </span>
                 </div>
             </article>
-            <section class="scroll_down2">
+            <div class="scroll_down2">
                 <span>Scroll&nbsp;Down<br><i class="fa fa-angle-down" aria-hidden="true"></i></span>
-            </section>
+            </div>
         </section><!-- greetingここまで -->
         <section class="katudo">
             <article class="katudo_keikaku">
-            <h2>活動計画</h2>
+                <img src="images/uni_logo_white.png">
+                <h2>活動計画</h2>
+                <p>
+                    <span>今年度の課題</span>
+                    <li>小平寮コスト削減活動</li>
+                    <li>小口募金制度の検討</li>
+                </p>
             </article>
             <article class="katudo_houkoku">
-            <h2>活動報告</h2>
+                <h2>活動報告</h2>
+                <p>
+                    <span><i class="fa fa-comments-o fa-2x" aria-hidden="true"></i><br>一橋大学との<br>対話集会</span>
+                    <span><i class="fa fa-microphone fa-2x" aria-hidden="true"></i><br>講演会
+                        <br>
+                        <span class="shousai">詳細を見る</span>
+                    </span>
+                    <span><i class="fa fa-users fa-2x" aria-hidden="true"></i><br>総会</span>
+                </p>
+                <p>
+                    <span><i class="fa fa-line-chart fa-2x" aria-hidden="true"></i><br>一橋講堂<br>収益改善事業</span>
+                    <span><i class="fa fa-graduation-cap fa-2x" aria-hidden="true"></i><br>地方出身学生の<br>入学促進活動</span>
+                    <span><i class="fa fa-globe fa-2x" aria-hidden="true"></i><br>課外英語教育の<br>推進</span>
+                </p>
             </article>
+            <div class="scroll_down3">
+                <span>Scroll&nbsp;Down<br><i class="fa fa-angle-down" aria-hidden="true"></i></span>
+            </div>
         </section><!-- katudoここまで -->
     </main>
     <footer>
