趣旨まで完成！

--- a/assets/index.html
+++ b/assets/index.html
@@ -92,19 +92,25 @@
             </div>
         </section><!-- katudoここまで -->
         <section class="syusi">
-            <h2>一橋を想う会の設立趣旨</h2>
-            <article class="syusi_left">
-            </article>
-            <article class="syusi_right">
+            <article>
+                <div class="paragraph">
+                <h2>一橋を想う会の設立趣旨</h2>
                 <p>一橋大学は、建学の時から「キャプテンズ・オブ・インダストリー」を掲げ、海外に雄飛する人材を数多く社会に送り出し、一橋のグローバル化は国内トップクラスにあると自負していましたが、2014年、スーパーグローバル大学（以下SGU）に不採択となり、かつ世界大学ランキングでも順位が低迷しています。SGU採択37校のリストを見ると、なぜこの中に母校が入っていないのか、信じがたい思いが募りますが、これが母校のブランド力が低下している現実です。一橋大学を取り巻く環境は、近年一段と厳しくなっており、国の理系大学優遇策、アジア勢の追い上げ、他の国公私立大学の生き残りをかけた改革推進の中で一橋がどこに自らの競争力を求めるのかを見極める必要があります。</p>
                 <img src="images/students.jpg" alt="一橋大学の学生たち">
                     <p>私達は母校一橋を愛し想うが故に大学当局とこれ等の問題認識を共有し、かつ継続的な対話の実現を通じ一橋の力強い再構築を応援するため、「一橋を想う会」を立ち上げました。既に幹事会を設立し、会の規約も制定し、会の運営体制を確立し、総会も開催しました。この想いを共有する会員数はすでに230名に達し、近い将来の300名を目指して活動中です。</p>
                     <p>蓼沼学長以下大学執行部との対話集会が2015年5月22日に行われ、活発な議論を通じて、SGU落選問題、大学ランキング問題、大学強化プランなどに関し相互理解が進みました。今後も対話を継続し、「想う会」として出来る限りの建設的な提案をし、大学支援にも注力する予定です。</p>
                     <p>また、如水会との連携も今後ますます強化して行くと共に、「想う会」の活動を広く如水会員にお知らせするため、如水会報へ活動報告を毎月掲載しています。</p>
                     <p>つきましては、この趣旨にご賛同頂き、当会の活動にご参加下さるようお願い致します。現時点では、会費は頂かず、会員のボランティアで運営しております。</p>
-                    <p>ご参加頂ける場合には、入会申込をクリック頂き、必要事項を入力の上、発信頂きたくお願い申し上げます。</p>
+                    <p>ご参加頂ける場合には、入会申込フォームより必要事項をご入力の上、発信頂きたくお願い申し上げます。</p>
+                </div>
             </article>
+            <div class="scroll_down2">
+                <span>入会のお申し込みは、<br>下記入力フォームからどうぞ。<br><i class="fa fa-angle-down" aria-hidden="true"></i></span>
+            </div>
         </section><!-- syusiここまで -->
+        <section class="nyukai">
+            <h2>入会の申し込み</h2>
+        </section><!-- contactここまで -->
     </main>
     <footer>
     </footer>
