全てのページが完成！ページ内リンクも。

--- a/assets/index.html
+++ b/assets/index.html
@@ -11,21 +11,22 @@
     <link rel="icon" type="image/ico" href="images/favicon.ico">
 </head>
 
-<body>
+<body id="home">
+    <div id="page_top"><a href="#"></a></div>
     <header>
         <section class="title">
-            <!-- <h1>一橋 を 想　う 会</h1> -->
+            <!-- <h1>一橋 を 想 う 会</h1> -->
             <img src="images/title.png" alt="一橋を想う会">
         </section>
         <nav>
-            <div class="logo"></div>
-            <div class="menu01"><a href="#.html">会長挨拶</a></div>
-            <div class="menu02"><a href="#.html">活動計画</a></div>
-            <div class="menu03"><a href="#.html">活動実績</a></div>
-            <div class="menu04"><a href="#.html">設立趣旨</a></div>
-            <div class="menu05"><a href="#.html">入会申込</a></div>
-            <div class="menu06"><a href="#.html">会則</a></div>
-            <div class="menu07"><a href="#.html">組織</a></div>
+            <a href="#home"><div class="logo"></div></a>
+            <div class="menu01"><a href="#menu01">会長挨拶</a></div>
+            <div class="menu02"><a href="#menu02">活動計画</a></div>
+            <div class="menu03"><a href="#menu03">活動実績</a></div>
+            <div class="menu04"><a href="#menu04">設立趣旨</a></div>
+            <div class="menu05"><a href="#menu05">入会申込</a></div>
+            <div class="menu06"><a href="#menu06">会則</a></div>
+            <div class="menu07"><a href="#menu07">組織</a></div>
         </nav>
         <section class="sub_title">
             <p>一橋を想う会は、</p>
@@ -37,7 +38,7 @@
         </section>
     </header>
     <main>
-        <section class="greeting">
+        <section class="greeting" id="menu01">
             <h2>会長よりご挨拶</h2>
             <article>
                 <div class="greeting_left">
@@ -61,7 +62,7 @@
                 <span>Scroll&nbsp;Down<br><i class="fa fa-angle-down" aria-hidden="true"></i></span>
             </div>
         </section><!-- greetingここまで -->
-        <section class="katudo">
+        <section class="katudo" id="menu02">
             <article class="katudo_keikaku">
                 <img src="images/uni_logo_white.png">
                 <h2>活動計画</h2>
@@ -71,7 +72,7 @@
                     <li>小口募金制度の検討</li>
                 </p>
             </article>
-            <article class="katudo_houkoku">
+            <article class="katudo_houkoku" id="menu03">
                 <h2>活動報告</h2>
                 <p>
                     <span><i class="fa fa-comments-o fa-2x" aria-hidden="true"></i><br>一橋大学との<br>対話集会</span>
@@ -91,30 +92,227 @@
                 <span>Scroll&nbsp;Down<br><i class="fa fa-angle-down" aria-hidden="true"></i></span>
             </div>
         </section><!-- katudoここまで -->
-        <section class="syusi">
+        <section class="syusi" id="menu04">
             <article>
                 <div class="paragraph">
-                <h2>一橋を想う会の設立趣旨</h2>
-                <p>一橋大学は、建学の時から「キャプテンズ・オブ・インダストリー」を掲げ、海外に雄飛する人材を数多く社会に送り出し、一橋のグローバル化は国内トップクラスにあると自負していましたが、2014年、スーパーグローバル大学（以下SGU）に不採択となり、かつ世界大学ランキングでも順位が低迷しています。SGU採択37校のリストを見ると、なぜこの中に母校が入っていないのか、信じがたい思いが募りますが、これが母校のブランド力が低下している現実です。一橋大学を取り巻く環境は、近年一段と厳しくなっており、国の理系大学優遇策、アジア勢の追い上げ、他の国公私立大学の生き残りをかけた改革推進の中で一橋がどこに自らの競争力を求めるのかを見極める必要があります。</p>
-                <img src="images/students.jpg" alt="一橋大学の学生たち">
+                    <h2>一橋を想う会の設立趣旨</h2>
+                    <p>一橋大学は、建学の時から「キャプテンズ・オブ・インダストリー」を掲げ、海外に雄飛する人材を数多く社会に送り出し、一橋のグローバル化は国内トップクラスにあると自負していましたが、2014年、スーパーグローバル大学（以下SGU）に不採択となり、かつ世界大学ランキングでも順位が低迷しています。SGU採択37校のリストを見ると、なぜこの中に母校が入っていないのか、信じがたい思いが募りますが、これが母校のブランド力が低下している現実です。一橋大学を取り巻く環境は、近年一段と厳しくなっており、国の理系大学優遇策、アジア勢の追い上げ、他の国公私立大学の生き残りをかけた改革推進の中で一橋がどこに自らの競争力を求めるのかを見極める必要があります。</p>
+                    <img src="images/students.jpg" alt="一橋大学の学生たち">
                     <p>私達は母校一橋を愛し想うが故に大学当局とこれ等の問題認識を共有し、かつ継続的な対話の実現を通じ一橋の力強い再構築を応援するため、「一橋を想う会」を立ち上げました。既に幹事会を設立し、会の規約も制定し、会の運営体制を確立し、総会も開催しました。この想いを共有する会員数はすでに230名に達し、近い将来の300名を目指して活動中です。</p>
                     <p>蓼沼学長以下大学執行部との対話集会が2015年5月22日に行われ、活発な議論を通じて、SGU落選問題、大学ランキング問題、大学強化プランなどに関し相互理解が進みました。今後も対話を継続し、「想う会」として出来る限りの建設的な提案をし、大学支援にも注力する予定です。</p>
                     <p>また、如水会との連携も今後ますます強化して行くと共に、「想う会」の活動を広く如水会員にお知らせするため、如水会報へ活動報告を毎月掲載しています。</p>
                     <p>つきましては、この趣旨にご賛同頂き、当会の活動にご参加下さるようお願い致します。現時点では、会費は頂かず、会員のボランティアで運営しております。</p>
                     <p>ご参加頂ける場合には、入会申込フォームより必要事項をご入力の上、発信頂きたくお願い申し上げます。</p>
                 </div>
+                <img class="uni_logo_red" src="images/uni_logo_red_trans.png">
             </article>
             <div class="scroll_down2">
                 <span>入会のお申し込みは、<br>下記入力フォームからどうぞ。<br><i class="fa fa-angle-down" aria-hidden="true"></i></span>
             </div>
         </section><!-- syusiここまで -->
-        <section class="nyukai">
+        <section class="nyukai" id="menu05">
             <h2>入会の申し込み</h2>
         </section><!-- contactここまで -->
+        <section class="kaisoku" id="menu06">
+            <h2>会則</h2>
+            <div class="article_kakomi">
+                <article class="kaisoku_left">
+                    <p>
+                        <h3>第１条（名称）</h3>
+                        <span>
+                            本会は、一橋を想う会と称する。
+                        </span>
+                    </p>
+                    <p>
+                        <h3>第２条（目的）</h3>
+                        <span>
+                            本会は一橋大学を応援・支援することを目的とする。
+                        </span>
+                    </p>
+                    <p>
+                        <h3>第３条（入会）</h3>
+                        <span>
+                            本会の趣旨に賛同し、第６条幹事会に対し申込みを行い幹事会で承認された一橋大学の卒業生および在校生をもって構成する。
+                        </span>
+                    </p>
+                    <p>
+                        <h3>第４条（退会）</h3>
+                        <span>会員は、幹事会に申し出て退会することができる。
+                        </span>
+                    </p>
+                    <p>
+                        <h3>第５条（幹事）</h3>
+                        <span>
+                            本会を運営するため、１５名以内の幹事を置く。幹事の任期は２年とする。ただし、再任を妨げない。幹事の選任は会員の自薦・他薦に基づき幹事候補者を募り、幹事会に諮ったうえで会長が決定する。
+                        </span>
+                    </p>
+                    <p>
+                        <h3>第６条（幹事会）</h3>
+                        <span>
+                            幹事会員をもって、幹事会を構成する。幹事会は、原則として毎月１回開催する。幹事会では、本会運営上の諸問題・重要事項を協議し、決定する。併せ必要に応じて総会に報告する。
+                        </span>
+                    </p>
+                </article>
+                <article class="kaisoku_right">
+                    <p>
+                        <h3>第７条（役付幹事）</h3>
+                        <span>
+                            幹事の互選により、会長、事務局長を選任する。副会長を選任することができる。会長は、会の事務を統括し、会を代表する。　　副会長は、会長を補佐し、必要により会長の任務を代行する。事務局長は、会の事務を処理する。
+                        </span>
+                    </p>
+                    <p>
+                        <h3>第８条（行事）</h3>
+                        <span>
+                            本会では、第２条の目的達成のため、幹事会、総会、講演会、一橋大学との対話集会などを実施する。
+                        </span>
+                    </p>
+                    <p>
+                        <h3>第９条（如水会等との関係）</h3>
+                        <span>
+                            本会は、第２条の目的達成のため、必要に応じて如水会、一橋大学等と連携、協力する。
+                        </span>
+                    </p>
+                    <p>
+                        <h3>第１０条（総会）</h3>
+                        <span>
+                            総会は、毎年１回５月に開催する。総会では、年間の活動報告と活動方針の審議を行う。
+                        </span>
+                    </p>
+                    <p>
+                        <h3>第１１条（講演会）</h3>
+                        <span>
+                            講演会は原則として年３回実施する。大学をめぐる諸問題について有識者・会員の適任者等による講演会を開催する。
+                        </span>
+                    </p>
+                    <p>
+                        <h3>第１２条（会則の改正）</h3>
+                        <span>
+                            この会則の改正は、総会の議決による。
+                            この会則は２０１５年５月１２日から施行する。
+                        </span>
+                    </p>
+                </article>
+            </div>
+        </section><!-- kaisokuここまで -->
+        <section class="sosiki" id="menu07">
+            <h2>組織</h2>
+            <hr>
+            <article>
+                <div class="soukai">
+                    <p>総会</p>
+                    <p>会員230名</p>
+                </div>
+                <div class="div_yajirusi01">
+                    <img class="yajirusi01" src="images/yajirusi01.png">
+                </div>
+                <div class="nigyoume">
+                    <div class="kanjikai">
+                        <p>幹事会</p>
+                        <p>現在&nbsp;6名&nbsp;</p>
+                        <p>
+                           塚野（昭40経）&nbsp;束野（昭42経）&nbsp;●●（昭●●△）<br>
+                           渡邊（昭46法）&nbsp;川上（昭63法）&nbsp;●●（昭●●△）
+                       </p>
+                    </div>
+                    <div class="div_yajirusi02">
+                    <img class="yajirusi02" src="images/yajirusi02.png">
+                    </div>
+                    <div class="kaicho">
+                        <p>会長</p>
+                        <p>高荻&nbsp;光紀<br>（昭39法）</p>
+                    </div>
+                    <div class="div_yajirusi02">
+                    <img class="yajirusi02" src="images/yajirusi02.png">
+                    </div>
+                    <div class="fuku">
+                        <p>副会長兼<br>事務局長</p>
+                        <p>半田&nbsp;敏雄<br>（昭38商）</p>
+                    </div>
+                </div>
+                <div class="div_yajirusi03">
+                <img class="yajirusi03" src="images/yajirusi03.png">
+                </div>
+                <div class="sangyoume">
+                    <div class="sosiki_gr">
+                        <div class="gr01">
+                            <h3>総務・会計・広報Gr</h3>
+                            <ul>
+                                <li>名簿</li>
+                                <li>メーリングリスト</li>
+                                <li>予定</li>
+                                <li>幹事会、総会進行</li>
+                                <li>庶務</li>
+                            </ul>
+                        </div>
+                        <div class="gr02">
+                            <h3>企画Gr</h3>
+                            <ul>
+                                <li>活動方針の検討</li>
+                            </ul>
+                        </div>
+                        <div class="gr03">
+                                <h3>渉外Gr</h3>
+                            <ul>
+                                <li>大学</li>
+                                <li>如水会</li>
+                                <li>行政</li>
+                                <li>企業</li>
+                                <li>マスコミ等</li>
+                            </ul>
+                        </div>
+                        <div class="gr04">
+                            <h3>調査研究Gr</h3>
+                            <ul>
+                                <li>SGU</li>
+                                <li>ランキング</li>
+                                <li>他大学</li>
+                                <li>大学の強み弱み</li>
+                                <li>大学のガバナンス</li>
+                                <li>セミナー講演会</li>
+                                <li>勉強会</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </article>
+        </section><!-- sosikiここまで -->
     </main>
     <footer>
+        &copy;2014&nbsp;一橋を想う会.
     </footer>
 </body>
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-
+<script>
+$(function(){
+  $('a[href^="#"]').click(function(){
+    var speed = 500;
+    var href= $(this).attr("href");
+    var target = $(href == "#" || href == "" ? 'html' : href);
+    var position = target.offset().top;
+    $("html, body").animate({scrollTop:position}, speed, "swing");
+    return false;
+  });
+});
+</script>
+<script>
+    $(function() {
+    var topBtn = $('#page_top');
+    topBtn.hide();
+    //スクロールが100に達したらボタン表示
+    $(window).scroll(function () {
+        if ($(this).scrollTop() > 100) {
+            topBtn.fadeIn();
+        } else {
+            topBtn.fadeOut();
+        }
+    });
+    //スクロールしてトップ
+    topBtn.click(function () {
+        $('body,html').animate({
+            scrollTop: 0
+        }, 500);
+        return false;
+    });
+});
+</script>
 </html>
